objects/vlocity_cmt__System__c.object
<CustomObject>
    <description>Registration of an external system to enable integration with the system. Used by Vlocity Order Management to register the fulfillment systems necessary to drive order fulfillment.</description>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>System</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>